force-app/main/default/objects/Lease__c/fields/Rent_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Rent_Frequency__c</fullName>
    <description>The frequency of which the rent will be paid. Measured in number of months.</description>
    <inlineHelpText>The frequency of which the rent will be paid. Measured in number of months.</inlineHelpText>
    <label>Rent Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>