force-app/main/default/objects/Lease__c/fields/Rent_Price__c.field-meta.xml
<CustomField>
    <fullName>Rent_Price__c</fullName>
    <label>Rent Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>