force-app/main/default/objects/Lease__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resident</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>