force-app/main/default/objects/Lease__c/validationRules/Valid_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
    <errorMessage>End Date can not be less than Start Date</errorMessage>
</ValidationRule>