force-app/main/default/objects/Lease__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resident__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Rent_Price__c</columns>
    <columns>Rent_Frequency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>